# 2P-proc

./: .gitignore  CITATION.cff  LICENSE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-singularity-build.yml  run_batch_mcorr_cnmf_pipeline.yml  update-badge.yml
.github/workflows.disabled/: docker-singularity-build.yml  test_motion_correction.yml  update-badge.yml
Caiman/: multisession_registration.py  my_pipeline_10x_zoom1.ipynb  my_pipeline_10x_zoom1_1544pi.ipynb  my_pipeline_16x_zoom0.8.ipynb  my_pipeline_16x_zoom1.ipynb  my_pipeline_25x_zoom1.ipynb  my_pipeline_25x_zoom2.ipynb
Caiman/.ipynb_checkpoints/: my_pipeline_10x_zoom1-checkpoint.ipynb  my_pipeline_16x_zoom1-checkpoint.ipynb  my_pipeline_16x_zoom2-checkpoint.ipynb  my_pipeline_25x_zoom1-checkpoint.ipynb
Caiman/notebooks/: my_pipeline_10x_zoom1.ipynb  my_pipeline_16x_zoom1.ipynb  my_pipeline_16x_zoom2.ipynb  my_pipeline_25x_zoom2.ipynb
Mesmerize/: compute_zcorr copy 2.ipynb  compute_zcorr copy.ipynb  compute_zcorr.ipynb  demo_pipeline.ipynb  export_mc_mmap.ipynb  load_save_tifs.ipynb  mcorr_cnmf.ipynb  mcorr_cnmf_bruker.ipynb  mcorr_cnmf_bruker_demo.ipynb  multisession_registration.ipynb  optimize_cnmf_bruker.ipynb  optimize_mcorr_bruker.ipynb  pipeline_GC6s_16x_zoom1_1024pi.ipynb  pipeline_GC8m_16x_zoom1_765pi.ipynb  pipeline_GC8m_16x_zoom1pt4_765pi.ipynb  pipeline_GC8m_16x_zoom1pt5_1024pi.ipynb  pipeline_GC8m_16x_zoom1pt5_512pi.ipynb  pipeline_GC8m_16x_zoom2_512pi.ipynb  pipeline_GC8m_25x_zoom1_765pi.ipynb  pipeline_notebook_template.ipynb  shift_zstack.ipynb
Mesmerize/utils/: benchmark_subtract_z_motion_neurons.ipynb  benchmark_subtract_z_motion_patches.ipynb  benchmark_subtract_z_motion_pixels.ipynb  compare_rigid_non-rigid.ipynb  get_batch_dir.ipynb  test_zcorrel_patches.ipynb
containers/2p_proc/: Dockerfile  build.sh  build_docker_singularity.sh  push.sh  readme.md
containers/2p_proc/context/: paths_params_io.py  requirements.txt
containers/NWB/: Dockerfile  build.sh  nwb_conversion.py  readme.md
containers/NWB/context/: requirements.txt
containers/allenneuraldynamics/: Dockerfile  build.sh  build_docker_singularity.sh
containers/analysis_2p/: Dockerfile  Dockerfile_condaenv  build.sh  build_docker_singularity.sh  push.sh  readme.md
containers/analysis_2p/context/: paths_io.py  paths_params_io.py  requirements.txt
containers/ffmpeg/: readme.md
containers/mesmerize-dockerfiles/: .gitignore  Dockerfile  Dockerfile_caiman  Dockerfile_mesmerize_updated  Dockerfile_update  Install_Apptainer.md  LICENSE  README.md  build.sh  build_docker_singularity.sh  push.sh
containers/suite2p/: Dockerfile  Dockerfile_s2p_rastermap  Dockerfile_s2p_stable  build.sh  build_docker_singularity.sh  build_s2p_rastermap.sh  build_s2p_rastermap_docker_singularity.sh  build_s2p_stable.sh  build_s2p_stable_docker_singularity.sh  push.sh  readme.md
containers/suite2p/context/: requirements.txt
containers/suite2p/context/scripts/: make_ops.py  run_deconv_spikes.py  run_rastermap.py  run_suite2p_api.py
environments/: a2p_venv_script.sh  s2p_venv_script.sh  venv_script.sh
modules/: README.md  __init__.py  bruker_concat_tif.py  compute_zcorr.py  extraction.py  motion_correction.py  test_bin_export.py
modules/utils/: plot_zones.py  save_z_motion_args.py
pipeline/: batch_cnmf.py  batch_mcorr.py  batch_roi_zcorr.py  pipeline_cnmf.py  pipeline_mcorr.py  pipeline_roi_zcorr.py  roi_zcorr.py
pipeline/configs/: config_template.json  config_template_cnmf.json  config_template_suite2p.json
pipeline/utils/: config_loader.py  pipeline_utils.py
scripts/: 2P_proc_template.sh  batch_2P_pipeline_template.sh  caiman_nb.sh  cluster_processing_template.sh  download_test_data.sh  run_motion_correction_test.sh  template.env
suite2p/: load_s2p_outputs.py  readme.md  run_suite2p_colab_2023.ipynb
tests/: test_make_composite_f_anat.py  test_module.py  test_motion_correction.py  test_patch_plots_efficient.py  test_subtract_z_motion_patches.py  test_subtract_z_motion_patches_comprehensive.py
ui/: my_new_ui_script.py  readme.md  run_A2P_ui.bat  run_A2P_ui.sh  run_app.sh  run_ui.py  template.env  ui_app.py
